Bug 1315570, vsync handling in parent process' main thread should use high priority runnables, r=ehsan